# scrapy-count-filter

./: .coveragerc  .gitignore  .style.yapf  .travis.yml  LICENSE  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: python.yml
scrapy_count_filter/: __init__.py  middleware.py
test/: requirements.txt  test_mw.py
