[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 100
ignore =
    # E121 continuation line under-indented for hanging indent
    E121,
    # E128 continuation line under-indented for visual indent
    E128,
exclude =
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
